--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ streamlit
 pdfplumber
 pandas
 numpy
-scikit-learn
+python-dotenv
 rapidfuzz
 openpyxl
 pdf2image      # optional if you later use image-based models
+
